Revision history for Perl extension Highlight.


2006/01/16 - Version 1.0 - first functional version.

2006/02/10 - Version 1.1 - generic approach to 16/256 color terminals.

2006/02/13 - Version 1.2 - basic functionality moved to Highlight.pm,
                supports grep option ('-g') with recursive search ('-r'),
                reads from STDIN as well as from file list.

2006/02/15 - Version 1.3 - more sophisticated option reset functionality added.
                Support for binary files added.

2008/12/16 - Version 1.4 - support for HL_INITSTRING environment variable
                which can be used to set common options
                (e.g. default hl color) for all cases.

2008/12/19 - Version 1.5 - distributed as perl package (MakeMaker's Makefile.PL),
                Highlight.pm now use strict,
                Highlight.pm cleanup from global variable @Patterns
                    (moved to class implementation),
                tagtypes with "xterm" uses "term",
                perl pod sections fixed and significantly extended,
                'hl -help' cleanup.

2010/08/17 - Version 1.6 - bugfix in hl script.
                "Attempt to free unreferenced scalar value" message at exit is
                now fixed.

2010/09/17 - Version 1.7 - in hl added possibility to store highlight snippets
                in file .hlrc in HOME directory

2011/09/09 - Version 1.7.1 - hl will not put color escape sequences if output
                directed not to STDOUT: this will make it possible to use hl
                safely in pipes

2015/10/25 - Version 1.8 - fixing multiple errors in hl, including:
                option '-' did not work when global option -b was explicitly set,
                added global option '-u' to match Unicode characters,
                added global option '--' to explicitly separate global and
                    highlight options.
                Highlight.pm version 1.3