@@ -3,7 +3,7 @@
 use Term::Highlight;
 
 ( $PROGNAME = $0 ) =~ s/.*\///;
-$VERSION = "1.8.1";
+$VERSION = "1.8.3";
 $TAGTYPE = "term";
 $RC_FILE = "$ENV{ HOME }/.hlrc";
 $SNIPPET_PTN = qr/\s*snippet\s+(\S+)\s+(.*)/o;
@@ -125,6 +125,17 @@ sub LoadSnippets
 }
 
 
+sub Flush
+{
+    my ( $fh ) = @_;
+    my $old_fh = select $fh;
+    my $old_flush = $|;
+    $| = 1;
+    $| = $old_flush;
+    select $old_fh;
+}
+
+
 
 # MAIN LOOP BEGIN
 
@@ -201,10 +212,7 @@ my $hl = Term::Highlight->new( tagtype => $TAGTYPE );
 #process command line arguments
 $hl->LoadArgs( \@Hl_args );
 
-
 my @Files = @ARGV;
-#remove binary files from file list if binary support is not enabled
-@Files = grep { ! -e or ! -r or -T or -d } @Files unless $BinarySupport;
 
 
 #process STDIN or file list line by line
@@ -219,7 +227,12 @@ if ( $GrepRecursively )
                                             ( $File::Find::name, $_, -B $_ );
         return unless -f $File;
         return if $FileIsBinary && ! $BinarySupport;
-        open FILE, "< $File" or warn $!;
+        unless ( open $FileHandle, "< $File" )
+        {
+            Flush( STDOUT );
+            warn( "WARNING: Unable to open $File: $!" );
+            next;
+        }
         if ( $FileIsBinary )
         {
             binmode( $FileHandle );
@@ -229,7 +242,7 @@ if ( $GrepRecursively )
             binmode( $FileHandle, ':utf8' );
             binmode( STDOUT, ':utf8' ) unless $GrepList;
         }
-        while ( <FILE> )
+        while ( <$FileHandle> )
         {
             next if ! $hl->Process( \$_ );
             print "$FullFile\n" if $GrepList && ! $FileIsBinary;
@@ -237,7 +250,7 @@ if ( $GrepRecursively )
             last if $GrepList || $FileIsBinary;
             print "$FullFile: $_";
         }
-        close FILE;
+        close $FileHandle;
     }, @Files
 }
 else
@@ -255,15 +268,23 @@ else
         {
             unless ( open $FileHandle, "< $File" )
             {
-                warn( "Unable to open $File: $!" );
+                Flush( STDOUT );
+                warn( "WARNING: Unable to open $File: $!" );
                 next;
             }
             if ( -d $FileHandle )
             {
-                warn( "$File is a directory, ignored" );
+                Flush( STDOUT );
+                warn( "WARNING: $File is a directory, ignored" );
                 next;
             }
             $FileIsBinary = -B $FileHandle;
+            if ( $FileIsBinary && ! $BinarySupport )
+            {
+                Flush( STDOUT );
+                warn( "WARNING: $File is a binary file, ignored" );
+                next;
+            }
         }
         if ( $FileIsBinary )
         {
@@ -276,13 +297,19 @@ else
         }
         while ( <$FileHandle> )
         {
-            next if ! $hl->Process( \$_ ) && $Grep;
+            my $matches = $hl->Process( \$_ );
+            next if ! $matches && $Grep;
             #debug purpose
             #print "$_->[ 0 ], $_->[ 1 ], $_->[ 2 ], $_->[ 3 ], ",
             #      "@${ $_->[ 4 ] }\n" foreach $hl->Process( \$_ );
-            print "$File\n" if $GrepList && ! $FileIsBinary;
-            print "Binary file $File matches\n" if $FileIsBinary;
-            last if $GrepList || $FileIsBinary;
+            my $print_once = $GrepList || $FileIsBinary;
+            if ( $matches )
+            {
+                print "$File\n" if $GrepList && ! $FileIsBinary;
+                print "Binary file $File matches\n" if $FileIsBinary;
+                last if $print_once;
+            }
+            next if $print_once;
             #print current line
             my $header = "$File: " if $print_filename;
             print $header, $_;
@@ -484,7 +511,7 @@ Alexey Radkov <alexey.radkov@gmail.com>
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright (C) 2008-2015 by A. Radkov.
+Copyright (C) 2008-2016 by A. Radkov.
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.8.8 or,
